@@ -79,6 +79,7 @@ sub run
 			};
 			eval {
 				$::application-> go if $::application-> alive;
+				$got_exception = 0;
 			};
 		}
 		last unless defined $@ && $got_exception;
@@ -558,7 +559,7 @@ viewer C<podview> ( see File/Run/prima-class ).
 Copyright 1997-2003 The Protein Laboratory, University of Copenhagen. All
 rights reserved.
 
-Copyright 2004-2020 Dmitry Karasik. All rights reserved. 
+Copyright 2004-2023 Dmitry Karasik. All rights reserved. 
 
 This program is distributed under the BSD License.
 
